<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/light_color"
        android:id="@+id/textView_crowd_color"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="40sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/crowd_light_speed"
        android:id="@+id/textView_crowd_speed"
        android:layout_below="@+id/textView_crowd_color"
        android:layout_marginTop="58dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="40sp"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="4"
        android:id="@+id/editText_crowd_speed"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignBottom="@+id/textView_crowd_speed"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/end_time"
        android:id="@+id/textView_crowd_end_time"
        android:textSize="40sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="AM/PM"
        android:id="@+id/switch2"
        android:layout_alignBottom="@+id/textView_crowd_end_time"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="5"
        android:id="@+id/editText_crowd_end_time"
        android:layout_alignBottom="@+id/textView_crowd_end_time"
        android:layout_toLeftOf="@+id/switch2"
        android:layout_toStartOf="@+id/switch2" />
    <View
        android:id="@+id/crowd_color_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView_crowd_color"
        android:layout_toEndOf="@+id/textView_crowd_color"
        android:layout_alignBottom="@+id/textView_crowd_color"
        android:layout_alignTop="@+id/textView_crowd_color"
        android:background="@color/colorAccent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:id="@+id/button_crowd_update"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView_crowd_end_time"
        android:layout_alignEnd="@+id/textView_crowd_end_time" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/button_crowd_cancel"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView_crowd_speed"
        android:layout_toEndOf="@+id/textView_crowd_speed" />


</RelativeLayout>